# E-commerce

./: .gitignore  README.md
backend/: pyproject.toml
backend/authentication/: serializers.py  urls.py  utils.py  views.py
backend/authentication/templates/: email_verification.html  verification_response.html
backend/config/: settings.py  urls.py
backend/users/: admin.py  manager.py  models.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: LoginApi.ts  SignupApi.tsx  index.ts
frontend/src/components/: index.ts
frontend/src/components/auth/: Form.tsx  form.module.css
frontend/src/components/header/: Header.tsx
frontend/src/components/home/: BestSellerSection.tsx  HeroSection.tsx  OfferSection.tsx  SeasonCollectionSection.tsx
frontend/src/pages/: AuthPage.tsx  HomePage.tsx  index.ts
frontend/src/routes/: AppRoutes.tsx  __root.tsx  index.ts  routes.tsx
frontend/src/utils/: calculateHeight.ts  index.ts
